fix: nom de poles des vieux plus visibles

--- a/style.css
+++ b/style.css
@@ -708,13 +708,14 @@ section.poles {
     bottom: 0;
     margin:unset;
     font-size: 1.5rem;
+    font-weight: bold;
     padding: 1rem;
     background-color: rgba(255, 255, 255, 0.555);
     transition: all ease 0.4s;
 }
 
 .vieux .pole:hover p{
-    background-color: rgba(255, 255, 255, 0.795);
+    background-color: rgba(255, 255, 255, 0.829);
     transition: all ease 0.4s;
 }
 
